--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,3 @@
-spring.kafka.consumer.group-id=crx
+spring.kafka.consumer.group-id=test-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.bootstrap-servers=${spring.embedded.kafka.brokers}
